# thu-samlib

./: CMakeLists.txt  README.md  TODO
cst/: makefile
samlib/: CMakeLists.txt  CustomOptionDescription.cpp  OptionPrinter.cpp  OptionPrinter.h  align_stat.cpp  bam_file.cpp  bam_file.h  bam_header_parser.cpp  bam_random_retrieve.cpp  calDepth.cpp  extract_train_data.cpp  genome_stat.cpp  genome_stat.h  glm.cpp  glm.h  nucl_align.cpp  nucl_align.h  nucl_align_method.cpp  nucl_align_tool.cpp  semi_homo_align.cpp  semi_homo_align.h  semi_homo_ghmm_order1.cpp  semi_homo_ghmm_order1.h  seqhmm.cpp
samtools/: Makefile  samtools
samtools/bcftools/: bcftools
samtools/misc/: ace2sam  bamcheck  maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
samtools/misc/maq2sam-long.dSYM/Contents/Resources/DWARF/: maq2sam-long
samtools/misc/maq2sam-short.dSYM/Contents/Resources/DWARF/: maq2sam-short
src/: bam_file.cpp
test/: bam_header_parser.cpp
